--- a/Joyce/pom.xml
+++ b/Joyce/pom.xml
@@ -19,6 +19,13 @@
     </properties>
 
     <dependencies>
+
+        <!--excel-poi-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.2</version>
+        </dependency>
         <!-- Apache Lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
