--- a/Joyce/pom.xml
+++ b/Joyce/pom.xml
@@ -19,7 +19,11 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.2</version>
+        </dependency>
         <!--excel-poi-->
         <dependency>
             <groupId>org.apache.poi</groupId>
