--- a/Joyce/src/main/resources/application.yml
+++ b/Joyce/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
       minIdle: 5
       maxActive: 20
       # 配置获取连接等待超时的时间
-      maxWait: 60000
+      maxWait: 600000
       # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
       timeBetweenEvictionRunsMillis: 60000
       # 配置一个连接在池中最小生存的时间，单位是毫秒
@@ -142,11 +142,11 @@ pagehelper:
 #文件路径上传路径
 file:
   config:
-    path: D:/${app.name}/files/config/
+    path: G:/${app.name}/files/config/
   upload:
     access: /img/photo/
     relative: ${file.upload.access}**
-    path: D:/${app.name}/upload/images/
+    path: G:/${app.name}/upload/images/
 
 #监听获得当前登录者
 context:
