--- a/Joyce/src/main/resources/application.yml
+++ b/Joyce/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
   port: 9099
   servlet:
     session:
-      timeout: 86400
+      timeout: 86400s
   tomcat:
     max-http-form-post-size: -1
   max-http-header-size: 80KB
@@ -35,7 +35,7 @@ spring:
       # 配置获取连接等待超时的时间
       maxWait: 600000
       # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-      timeBetweenEvictionRunsMillis: 60000
+      timeBetweenEvictionRunsMillis: 600000
       # 配置一个连接在池中最小生存的时间，单位是毫秒
       minEvictableIdleTimeMillis: 300000
       validationQuery: SELECT 1 FROM DUAL
