--- a/Joyce/src/main/resources/application.yml
+++ b/Joyce/src/main/resources/application.yml
@@ -163,13 +163,14 @@ pagehelper:
 
 #文件路径上传路径
 file:
+  prefix : E
+  temp: ${file.prefix}:/${app.name}/temp
   config:
-    prefix : E
-    path: ${file.config.prefix}:/${app.name}/files/config/
+    path: ${file.prefix}:/${app.name}/files/config/
   upload:
-    access: /img/photo/
+    access: /static/source/
     relative: ${file.upload.access}**
-    path: ${file.config.prefix}:/${app.name}/upload/images/
+    path: ${file.prefix}:/${app.name}/upload/source/
 
 #监听获得当前登录者
 context:
