--- a/Joyce/src/main/resources/application.yml
+++ b/Joyce/src/main/resources/application.yml
@@ -163,7 +163,7 @@ pagehelper:
 
 #文件路径上传路径
 file:
-  prefix : D
+  prefix :  E
   temp: ${file.prefix}:/${app.name}/temp
   config:
     path: ${file.prefix}:/${app.name}/files/config/
