--- a/Joyce/pom.xml
+++ b/Joyce/pom.xml
@@ -314,12 +314,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
         </dependency>
-        <!--反射工具-->
+     <!--   &lt;!&ndash;反射工具&ndash;&gt;
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
             <version>0.9.11</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
