--- a/Joyce/src/main/resources/joyce.properties
+++ b/Joyce/src/main/resources/joyce.properties
@@ -3,12 +3,11 @@ command.close=shut down
 command.init=joyce init
 command.clear=clear
 
-
-###前端传入解析表名
-##类名
-auto.class_name=${className}
-##属性
-auto.attribute_list = ${attributeList}
-auto.attribute_name = ${attributeName}
-auto.attribute_content = ${attributeContent}
-auto.attribute_type = ${attributeType}
+auto.def.type.Long=BIGINT
+auto.def.length.Long=64
+auto.def.type.Sting=VARCHAR
+auto.def.length.Sting=64
+auto.def.type.Integer=INT
+auto.def.length.Integer=32
+auto.def.type.Date=datetime
+auto.def.length.Date=0
