--- a/Joyce/pom.xml
+++ b/Joyce/pom.xml
@@ -314,6 +314,13 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
         </dependency>
+        <!--调用python脚本-->
+        <dependency>
+            <groupId>org.python</groupId>
+            <artifactId>jython-standalone</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
      <!--   &lt;!&ndash;反射工具&ndash;&gt;
         <dependency>
             <groupId>org.reflections</groupId>
