--- a/Joyce/src/main/resources/joyce.properties
+++ b/Joyce/src/main/resources/joyce.properties
@@ -5,8 +5,8 @@ command.clear=clear
 
 auto.def.type.Long=BIGINT
 auto.def.length.Long=64
-auto.def.type.Sting=VARCHAR
-auto.def.length.Sting=64
+auto.def.type.String=VARCHAR
+auto.def.length.String=64
 auto.def.type.Integer=INT
 auto.def.length.Integer=32
 auto.def.type.Date=datetime
