--- a/Joyce/pom.xml
+++ b/Joyce/pom.xml
@@ -321,6 +321,11 @@
             <version>2.7.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.kevinsawicki</groupId>
+            <artifactId>http-request</artifactId>
+            <version>6.0</version>
+        </dependency>
      <!--   &lt;!&ndash;反射工具&ndash;&gt;
         <dependency>
             <groupId>org.reflections</groupId>
