--- a/Joyce/pom.xml
+++ b/Joyce/pom.xml
@@ -326,6 +326,12 @@
             <artifactId>http-request</artifactId>
             <version>6.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
      <!--   &lt;!&ndash;反射工具&ndash;&gt;
         <dependency>
             <groupId>org.reflections</groupId>
