--- a/Joyce/pom.xml
+++ b/Joyce/pom.xml
@@ -19,6 +19,25 @@
     </properties>
 
     <dependencies>
+        <!--excel-poi-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-scratchpad</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
         <!--   支付宝支付的依赖     -->
         <dependency>
             <groupId>com.alipay.sdk</groupId>
@@ -32,11 +51,11 @@
             <version>1.10.2</version>
         </dependency>
         <!--excel-poi-->
-        <dependency>
+       <!-- <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>4.1.2</version>
-        </dependency>
+        </dependency>-->
 
 
         <!--lombok-->
