--- a/Joyce/pom.xml
+++ b/Joyce/pom.xml
@@ -247,11 +247,11 @@
         </dependency>
 
         <!--分页-->
-        <dependency>
+       <!-- <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.3.1</version>
-        </dependency>
+        </dependency>-->
 
         <!--Security依赖 -->
         <dependency>
