--- a/Joyce/src/main/resources/static/editor/.jshintrc
+++ b/Joyce/src/main/resources/static/editor/.jshintrc
@@ -1,20 +1,33 @@
 {
-	"esnext": true,
-	"bitwise": true,
-	"camelcase": true,
-	"curly": true,
-	"eqeqeq": true,
+	"es5": true,
+	"node": true,
+	"bitwise": false,
+	"camelcase": false,
+	"curly": false,
+	"eqeqeq": false,
+	"forin": true,
+	"strict": false,
+	"freeze": true,
 	"immed": true,
 	"indent": 4,
-	"latedef": true,
+	"latedef": false,
 	"newcap": true,
 	"noarg": true,
-	"quotmark": "double",
-	"regexp": true,
+	"noempty": false,
+	"nonbsp": true,
+	"nonew": true,
+	"plusplus": false,
 	"undef": true,
-	"unused": true,
-	"strict": true,
 	"trailing": true,
-	"smarttabs": true,
-	"white": true
+	"debug": false,
+	"funcscope": true,
+	"laxcomma": false,
+	"loopfunc": true,
+	"onevar": false,
+	"unused": true,
+	"browser": true,
+	"globals": {
+		"$": false,
+		"jquery": false
+	}
 }
