--- a/Joyce/src/main/resources/joyce.properties
+++ b/Joyce/src/main/resources/joyce.properties
@@ -11,7 +11,10 @@ auto.def.type.Integer=INT
 auto.def.length.Integer=32
 auto.def.type.Date=datetime
 auto.def.length.Date=0
-
+auto.def.type.Short=TINYINT
+auto.def.length.Short=3
+auto.def.type.BigDecimal=DECIMAL
+auto.def.length.BigDecimal=32
 
 # 沙箱网关名支付宝网关名、partnerId和appId
 open_api_domain = https://openapi.alipay.com/gateway.do
