--- a/Joyce/pom.xml
+++ b/Joyce/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>4.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>ws.schild</groupId>
+            <artifactId>jave-all-deps</artifactId>
+            <version>3.3.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.poi</groupId>
